feat: 添加深度学习论文示例并改进Markdown转换功能
- 新增深度学习论文示例文件demo.md和对应的HTML输出
- 添加CNN架构示意图cnn_architecture.svg
- 改进md_to_html.py支持动态页面标题和双格式数学公式
- 更新README.md文档说明新功能
- 优化.gitignore采用白名单模式管理文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-# 排除所有文件，只保留指定的5个文件
+# 白名单模式 - 只保留指定文件
 *
 
-# 允许上传的文件（白名单）
-!LICENSE
+# 允许的文件
 !md_to_html.py
+!demo.md
+!demo.html
 !README.md
-!test_markdown.md
-
-# 确保.gitignore本身被跟踪
+!LICENSE
 !.gitignore
+!*.svg
